--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "prepare": "husky"
     },
     "devDependencies": {
+        "esbuild": "^0.25.9",
         "husky": "^9.1.7",
         "lint-staged": "^15.3.0",
         "prettier": "^3.6.2",
