--- a/apps/chaldea-foundation-center/package.json
+++ b/apps/chaldea-foundation-center/package.json
@@ -12,7 +12,9 @@
         "start": "strapi start",
         "strapi": "strapi",
         "upgrade": "npx @strapi/upgrade latest",
-        "upgrade:dry": "npx @strapi/upgrade latest --dry"
+        "upgrade:dry": "npx @strapi/upgrade latest --dry",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "test:coverage": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "@strapi/plugin-cloud": "5.23.0",
