fix for dev command in strapi

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "workspaces": [
         "apps/*",
         "packages/*"
-    ]
+    ],
+    "dependencies": {
+        "@strapi/strapi": "^5.23.0"
+    }
 }
