--- a/apps/movie-party-frontend/package.json
+++ b/apps/movie-party-frontend/package.json
@@ -11,18 +11,17 @@
         "test": "jest",
         "test:coverage": "jest --coverage"
     },
-    "dependencies": {
-        "react": "^19.1.1",
-        "react-dom": "^19.1.1"
-    },
     "devDependencies": {
+        "@babel/core": "^7.28.3",
+        "@babel/preset-env": "^7.28.3",
+        "@babel/preset-react": "^7.27.1",
+        "@babel/preset-typescript": "^7.27.1",
         "@eslint/js": "^9.33.0",
         "@testing-library/jest-dom": "^6.8.0",
         "@testing-library/react": "^16.3.0",
         "@types/jest": "^30.0.0",
-        "@types/react": "^19.1.10",
-        "@types/react-dom": "^19.1.7",
         "@vitejs/plugin-react": "^5.0.0",
+        "babel-jest": "^30.0.5",
         "eslint": "^9.33.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
@@ -35,5 +34,11 @@
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.39.1",
         "vite": "^5.4.19"
+    },
+    "dependencies": {
+        "@types/react": "^18.3.1",
+        "@types/react-dom": "^18.3.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
