--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "packages/*"
     ],
     "dependencies": {
-        "@strapi/strapi": "^5.23.0"
+        "@strapi/strapi": "^5.23.0",
+        "uuid": "^11.1.0"
     }
 }
