--- a/apps/chaldea-foundation-center/package.json
+++ b/apps/chaldea-foundation-center/package.json
@@ -32,6 +32,7 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "esbuild": "^0.25.9",
+        "husky": "^9.1.7",
         "typescript": "^5"
     },
     "engines": {
