--- a/apps/chaldea-foundation-center/package.json
+++ b/apps/chaldea-foundation-center/package.json
@@ -36,7 +36,7 @@
         "typescript": "^5"
     },
     "engines": {
-        "node": "22.x.x",
-        "npm": ">=11.5.2"
+        "node": ">=18.0.0 <=22.x.x",
+        "npm": ">=6.0.0"
     }
 }
