--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 # Prevent hoisting of Strapi packages to avoid module resolution issues
-public-hoist-pattern[]=!@strapi/*
-public-hoist-pattern[]=!strapi
+hoist-pattern[]=!@strapi/*
+hoist-pattern[]=!strapi
