--- a/apps/chaldea-foundation-center/package.json
+++ b/apps/chaldea-foundation-center/package.json
@@ -18,6 +18,7 @@
         "@strapi/plugin-cloud": "5.23.1",
         "@strapi/plugin-users-permissions": "5.23.1",
         "@strapi/strapi": "5.23.1",
+        "better-sqlite3": "^12.2.0",
         "mysql2": "3.9.8",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
