--- a/apps/movie-party-back/package.json
+++ b/apps/movie-party-back/package.json
@@ -5,7 +5,13 @@
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "clean": "rm -rf dist",
+        "prebuild": "npm run clean",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "lint": "eslint src/**/*.ts",
+        "lint:fix": "eslint src/**/*.ts --fix"
     },
     "keywords": [],
     "author": "",
