--- a/apps/movie-party-front/package.json
+++ b/apps/movie-party-front/package.json
@@ -7,7 +7,12 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "clean": "rm -rf dist",
+        "prebuild": "npm run clean",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "lint:fix": "eslint src/**/*.ts --fix"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
