--- a/turbo.json
+++ b/turbo.json
@@ -27,6 +27,10 @@
         },
         "clean": {
             "cache": false
+        },
+        "start": {
+            "dependsOn": ["build"],
+            "cache": false
         }
     }
 }
